# coding_dojo

./: .clang-format  .gitignore  .gitmodules
StringCalculator/C++/boost/: string_calculator.hpp
StringCalculator/C++/cpp03/: string_calculator.hpp
StringCalculator/C++/cpp11/: string_calculator.hpp
StringCalculator/C++/lib/: convert.hpp  str_utils.hpp
StringCalculator/C++/test/: main.cpp
StringCalculator/io/: string_calculator.io
args/c++/: CMakeLists.txt  args  args.cpp  jamroot
args/c++/args/: CMakeLists.txt  jamfile  main.cpp
args/c++/libargs/: CMakeLists.txt  args.cpp  args.hpp  args.test.cpp  jamfile  main.test.cpp  main_test.cpp
case_it/bash/: snake_files.sh  snake_it.sh
coffee_machine/d/: dub.json
coffee_machine/d/source/: coffee_machine.d
csv/c++/: jamfile.jam  main.cpp
data_munging/c++/: .clang_complete  Jamroot  boost-build.jam  data_munging_v1.cpp
diamond/c++/: CMakeLists.txt  diamond.cpp  jamroot.jam
diamond/c++/v1/: CMakeLists.txt  diamond.cpp  diamond.hpp  jamfile
diamond/c++/v2/: CMakeLists.txt  diamond.cpp  diamond.hpp  jamfile
diamond/c++/v3/: CMakeLists.txt  diamond.cpp  diamond.hpp  jamfile
diamond/clojure/: diamond.clj
diamond/d/: dub.json
diamond/d/source/: diamond.d
diamond/elixir/diamond/: mix.exs
game_of_life/c++/: game_of_life.cpp  jamroot.jam
game_of_life/d/: game_of_life.d
gilded_rose/c++/: CMakeLists.txt  aged_brie.cpp  aged_brie.hpp  article.cpp  article.hpp  articles.hpp  backstage_pass.cpp  backstage_pass.hpp  conjured.cpp  conjured.hpp  gilded_rose.cpp  gilded_rose.hpp  item.cpp  item.hpp  main.cpp  quality.cpp  quality.hpp  sulfuras.cpp  sulfuras.hpp  table.cpp  test.cpp
gilded_rose/c++/base/: CMakeLists.txt  gilded_rose.cpp
gilded_rose/c++/crtp/: CMakeLists.txt  gilded_rose.cpp
gilded_rose/c++/std_variant/: gilded_rose.cpp
gilded_rose/c++/type_erasure/: CMakeLists.txt  gilded_rose.cpp
gilded_rose/c++/value_with_any_interface/: CMakeLists.txt  gilded_rose.cpp
gilded_rose/c++/virtual/: CMakeLists.txt  gilded_rose.cpp
leap_year/c++/: leap_year.cpp
ocr/c++/ocr/: CMakeLists.txt  jamroot
ocr/c++/ocr/libocr/: CMakeLists.txt  jamfile  main.test.cpp  ocr.cpp  ocr.hpp  ocr.test.cpp
ocr/c++/ocr/ocr/: CMakeLists.txt  jamfile  main.cpp
pencil/: Readme.org
pencil/c++/: .clang_complete  jamroot.jam  main.cpp
racing_car/c++/: Alarm.cpp  Alarm.h  HtmlPagesConverter.cpp  HtmlPagesConverter.h  HtmlTextConverter.cpp  HtmlTextConverter.h  ISensor.h  README.org  Sensor.cpp  Sensor.h  StringEscapeUtils.h  jamroot.jam  main.cpp
roman_numerals/c++/: jamroot.jam  roman_numerals.cpp
roman_numerals/clojure/: roman_numerals.clj
roman_numerals/d/: dub.json
roman_numerals/d/source/: roman_numerals.d
roman_numerals/python/: roman_numerals.py
roman_numerals/scala/: build.sbt  roman_numerals.scala
string_calculator/c++/: jamroot
string_calculator/c++/boost/: string_calculator.hpp
string_calculator/c++/cpp03/: string_calculator.hpp
string_calculator/c++/cpp11/: string_calculator.hpp
string_calculator/c++/cpp17/: jamfile  string_calculator.cpp  string_calculator.hpp
string_calculator/c++/cpploop/: string_calculator.hpp
string_calculator/c++/lib/: convert.hpp  str_utils.hpp
string_calculator/c++/test/: jamfile  main.cpp
string_calculator/clojure/: string_calculator.clj
string_calculator/d/: dub.json  string_calculator.d
string_calculator/d/source/: string_calculator.d
string_calculator/io/: string_calculator.io
string_calculator/rust/: Cargo.toml
string_calculator/scala/: build.sbt  string_calculator.scala
tennis/c++/: Jamroot  tennis.cpp  tennis_v1.cpp  tennis_v2.cpp
(+10 files in other folders)
